--- a/src/locale/messages.ar.json
+++ b/src/locale/messages.ar.json
@@ -78,89 +78,82 @@
     "saveSuccess.sentToLabel": "أُرسل إلى:",
     "common.close": " إغلاق ",
     "saveSuccess.emailLink": " رابط البريد ",
-  "email10min.hero.title.label": "مولد بريد مؤقت لمدة 10 دقائق",
-  "email10min.hero.subtitle.label": "أنشئ بسهولة {$START_TAG_STRONG}بريد مؤقت لمدة 10 دقائق{$CLOSE_TAG_STRONG} لاستخدامه في التسجيلات لمرة واحدة، التحقق عبر OTP، والتحميلات. يُعرف أيضًا باسم {$START_EMPHASISED_TEXT}بريد 10 دقائق، بريد مهمل، بريد وهمي، أو صندوق بريد مؤقت{$CLOSE_EMPHASISED_TEXT}. إنه أبسط طريقة لحماية بريدك الشخصي والبقاء بعيدًا عن الرسائل المزعجة.",
-  
-  "email10min.about.title.label": "ما هو البريد المؤقت لمدة 10 دقائق؟",
-  "email10min.about.desc1.label": "{$START_TAG_STRONG}البريد المؤقت لمدة 10 دقائق{$CLOSE_TAG_STRONG} هو صندوق بريد قصير العمر يتم حذفه تلقائيًا بعد 600 ثانية. يطلق عليه الكثيرون أيضًا {$START_TAG_STRONG}صندوق بريد ذاتي التدمير{$CLOSE_TAG_STRONG} لأنه يختفي بمجرد انتهاء الوقت. مثالي لتلقي رموز التحقق، روابط التأكيد أو التحميلات دون كشف هويتك.",
-  "email10min.about.desc2.label": "على عكس العناوين العشوائية أو الوهمية، هذا {$START_TAG_STRONG}صندوق بريد مؤقت حقيقي{$CLOSE_TAG_STRONG} تصل إليه الرسائل فورًا. لا يتطلب تسجيل أو بيانات شخصية، مما يجعله وسيلة آمنة وسريعة لحماية خصوصيتك على الإنترنت.",
-  
-  "email10min.about.features.title.label": "المميزات الرئيسية:",
-  "email10min.about.feature1.label": "ينتهي تلقائيًا بعد 10 دقائق (600 ثانية)",
-  "email10min.about.feature2.label": "صندوق وارد للاستقبال فقط للتحقق و OTP",
-  "email10min.about.feature3.label": "مجهول، مشفر وآمن",
-  "email10min.about.feature4.label": "يعمل فورًا دون الحاجة لتسجيل",
+    "email10minTitle": " بريد مؤقت لمدة 10 دقائق – صندوق واردات مجاني دون تسجيل ",
+    "email10minSubtitle": " أنشئ فوراً {$START_TAG_STRONG}عنوان بريد مؤقت لمدة 10 دقائق{$CLOSE_TAG_STRONG}. مثالي لعمليات التحقق عبر البريد وOTPs والتسجيلات المجهولة دون كشف بريدك الشخصي. ",
+    "whatIs10minEmail": "ما هو البريد المؤقت لمدة 10 دقائق؟",
+    "10minEmailDesc1": " {$START_TAG_STRONG}البريد المؤقت لمدة 10 دقائق{$CLOSE_TAG_STRONG} هو صندوق واردات مجهول يتلاشى بعد 10 دقائق فقط. مثالي للتسجيلات لمرة واحدة، تأكيدات البريد، تنزيل الملفات، وتجنب الرسائل المزعجة. ",
+    "10minEmailDesc2": " لا حاجة للتسجيل أو تقديم بيانات شخصية، ما يجعله الطريقة الأكثر أماناً للحفاظ على خصوصيتك على الإنترنت. استخدمه كبريد مؤقت كلما احتجت صندوقاً آمناً وسريعاً. ",
+    "feature1": "ينتهي تلقائياً بعد 10 دقائق",
+    "feature2": "مجهول وغير قابل للتتبع",
+    "feature3": "استلم OTPs والتأكيدات والمرفقات بأمان",
+    "featureTitle1": "صناديق ذاتية الإتلاف",
+    "featureDesc1": "يتم حذف جميع الرسائل تلقائياً بعد 10 دقائق لحماية خصوصيتك.",
+    "featureTitle2": "لا يتطلب تسجيل",
+    "featureDesc2": "فقط زر الصفحة لتبدأ — بلا دخول، بلا كلمة مرور، بلا تعقيد.",
+    "featureTitle3": "مجهول وآمن",
+    "featureDesc3": "لا نخزن أو نسجل أي بيانات مستخدم؛ يتم محو جميع الصناديق بعد الاستخدام.",
+    "howToUseTitle": "كيفية استخدام بريد مؤقت لمدة 10 دقائق",
+    "step1": "{$START_TAG_LUCIDE_ICON}{$CLOSE_TAG_LUCIDE_ICON}{$START_TAG_SPAN}زر موقعنا لتحصل فوراً على صندوق واردات مؤقت مجاني.{$CLOSE_TAG_SPAN}",
+    "step2": "{$START_TAG_LUCIDE_ICON}{$CLOSE_TAG_LUCIDE_ICON}{$START_TAG_SPAN}انسخ عنوان البريد المؤقت لمدة 10 دقائق واستخدمه للتسجيلات أو عمليات التحقق.{$CLOSE_TAG_SPAN}",
+    "step3": "{$START_TAG_LUCIDE_ICON}{$CLOSE_TAG_LUCIDE_ICON}{$START_TAG_SPAN}استلم OTPs أو رسائل التأكيد فوراً — يتم تحديث الصندوق كل 10 ثوانٍ.{$CLOSE_TAG_SPAN}",
+    "step4": "{$START_TAG_LUCIDE_ICON}{$CLOSE_TAG_LUCIDE_ICON}{$START_TAG_SPAN}يُحذف كل شيء نهائياً بعد 10 دقائق لضمان أقصى خصوصية.{$CLOSE_TAG_SPAN}",
+    "useCasesTitle": "متى تستخدم عنوان بريد مؤقت؟",
+    "techUseCases": "التقنية والاختبار",
+    "techUseCase1": "اختبار تدفق التسجيل",
+    "techUseCase2": "معاينة قوالب البريد",
+    "techUseCase3": "تصحيح واجهات برمجة رسائل البريد",
+    "privacyUseCases": "الخصوصية والإنتاجية",
+    "privacyUseCase1": "تجنب الرسائل المزعجة من المواقع الجديدة",
+    "privacyUseCase2": "الوصول إلى المحتوى المحجوب بأمان",
+    "privacyUseCase3": "تنزيل البرامج والموارد",
+    "privacyUseCase4": "تسجيلات مجهولة في المنتديات",
+    "faqTitle": " الأسئلة الشائعة ",
+    "faq1Question": "ما هو بريد 10 دقائق؟",
+    "faq1Answer": " عنوان بريد مؤقت ينتهي بعد 10 دقائق، مثالي لتلقي الرسائل لمرة واحدة أو روابط التحقق. تحتاج لوقت أطول؟ جرّب مجاناً {$START_LINK}بريد 20 دقيقة{$CLOSE_LINK} أو {$START_LINK_1}بريد 30 دقيقة{$CLOSE_LINK} بدلاً من ذلك. ",
+    "faq2Question": "هل الاستخدام مجاني؟",
+    "faq2Answer": " نعم، مجاني تماماً. بلا تسجيل، بلا إعلانات، ولا رسوم مميزة. ",
+    "faq3Question": "هل يمكنني استقبال OTPs ورسائل التأكيد؟",
+    "faq3Answer": " نعم، يدعم الصندوق المؤقت جميع أنواع الرسائل الشائعة بما فيها OTPs وروابط التأكيد. ",
+    "faq4Question": "هل أستطيع تمديد العداد لبريدي المؤقت؟",
+    "faq4Answer": " نعم، فقط انقر زر \"إعادة الضبط\" لبدء عدّ 10 دقائق من جديد. ",
+    "faq5Question": "هل هذا العنوان مجهول فعلاً؟",
+    "faq5Answer": " بالتأكيد. لا نجمع أو نتتبع أية بيانات شخصية؛ كل صندوق مؤقت وخاص. ",
+    "faq6Question": "كم بريداً مؤقتاً يمكنني إنشاءه؟",
+    "faq6Answer": " غير محدود. أنشئ ما تشاء من الصناديق المؤقتة، لكل واحد مدة خاصة به. ",
+    "faq7Question": "هل يعمل على الهاتف؟",
+    "faq7Answer": " نعم، الخدمة متجاوبة بالكامل وتعمل بسلاسة على جميع الأجهزة. ",
+    "faq8Question": "هل هو آمن للرسائل المهمة؟",
+    "faq8Answer": " مناسب للاستخدام قصير المدى مثل OTPs ورسائل التأكيد. تجنّب استخدامه للبيانات الحساسة. ",
+    "faq9Question": "هل هو أفضل من بريد مزيف؟",
+    "faq9Answer": " نعم! على عكس البريد المزيّف، يوفّر هذا خدمة بريد حقيقية تعمل لتلقي الرسائل. ",
+    "seo.email10min.faq.q1": "ما هو بريد 10 دقائق؟",
+"seo.email10min.faq.a1": "بريد إلكتروني مؤقت ينتهي صلاحيته بعد 10 دقائق، مثالي لتلقي الرسائل لمرة واحدة أو روابط التحقق. يمكنك أيضًا تجربة بريدنا المؤقت المجاني لمدة 20 دقيقة أو 30 دقيقة إذا كنت بحاجة إلى وقت أطول.",
 
-  "email10min.how.title.label": "كيف يعمل البريد المؤقت",
-  "email10min.how.step1.label": "افتح هذه الصفحة لتحصل على صندوق بريد مؤقت فورًا.",
-  "email10min.how.step2.label": "انسخ العنوان في أي موقع أو تطبيق يحتاج إلى تحقق عبر البريد.",
-  "email10min.how.step3.label": "استلم رموز OTP، روابط التأكيد أو الرسائل في الوقت الحقيقي.",
-  "email10min.how.step4.label": "بعد 10 دقائق، يتم حذف البريد والرسائل نهائيًا. هذا ما يجعله صندوق بريد ذاتي التدمير يحافظ على بياناتك.",
+"seo.email10min.faq.q2": "هل الاستخدام مجاني؟",
+"seo.email10min.faq.a2": "نعم، الخدمة مجانية تمامًا. لا حاجة للتسجيل، بدون إعلانات، وبدون أي رسوم إضافية.",
 
-  "email10min.use.title.label": "أفضل حالات الاستخدام",
-  "email10min.use.dev.title.label": "للمطورين والمختبرين",
-  "email10min.use.dev.li1.label": "اختبار التسجيل وتدفقات تسجيل الدخول",
-  "email10min.use.dev.li2.label": "معاينة الرسائل أو رسائل API",
-  "email10min.use.dev.li3.label": "إنشاء حسابات تجريبية بسرعة",
-  "email10min.use.privacy.title.label": "للاستخدام اليومي والخصوصية",
-  "email10min.use.privacy.li1.label": "تسجيلات مجهولة على منصات جديدة",
-  "email10min.use.privacy.li2.label": "الوصول إلى أكواد الخصم أو التحميلات المحمية",
-  "email10min.use.privacy.li3.label": "تجنب الرسائل المزعجة والقوائم البريدية",
+"seo.email10min.faq.q3": "هل يمكنني استلام أكواد OTP ورسائل التأكيد؟",
+"seo.email10min.faq.a3": "نعم، البريد المؤقت يدعم جميع أنواع الرسائل الشائعة بما في ذلك أكواد OTP وروابط التأكيد.",
 
-  "email10min.trust.title.label": "لماذا تثق بـ TempMail4U",
-  "email10min.trust.desc1.label": "منذ 2020، قدمت TempMail4U آلاف {$START_TAG_STRONG}صناديق البريد المؤقت{$CLOSE_TAG_STRONG} يوميًا للمستخدمين حول العالم. نحن نركز على الخصوصية، الأمان والبساطة:",
-  "email10min.trust.li1.label": "لا حاجة للتسجيل أو إدخال بيانات شخصية",
-  "email10min.trust.li2.label": "الصناديق تُحذف تلقائيًا بعد انتهاء المدة",
-  "email10min.trust.li3.label": "حماية عبر HTTPS وسياسة خصوصية واضحة",
+"seo.email10min.faq.q4": "هل يمكنني تمديد الوقت لبريدي المؤقت؟",
+"seo.email10min.faq.a4": "نعم، ببساطة اضغط على زر \"إعادة التعيين\" لإعادة تشغيل عداد العشر دقائق.",
 
-  "email10min.proscons.title.label": "المزايا والقيود",
-  "email10min.pros.title.label": "المزايا:",
-  "email10min.pros.li1.label": "سريع وسهل الاستخدام",
-  "email10min.pros.li2.label": "يحمي بريدك الشخصي",
-  "email10min.pros.li3.label": "مثالي للتحقق السريع و OTP",
-  "email10min.cons.title.label": "القيود:",
-  "email10min.cons.li1.label": "بعض المواقع تحظر النطاقات المؤقتة",
-  "email10min.cons.li2.label": "غير مناسب للحسابات الحساسة أو طويلة الأمد",
-  "email10min.cons.li3.label": "يتم حذف الرسائل نهائيًا بعد انتهاء الوقت",
+"seo.email10min.faq.q5": "هل هذا البريد الإلكتروني مجهول حقًا؟",
+"seo.email10min.faq.a5": "بالتأكيد. نحن لا نجمع أو نتتبع أي بيانات شخصية؛ كل صندوق بريد مؤقت وخاص.",
 
-  "email10min.troubleshoot.title.label": "استكشاف مشاكل استلام البريد",
-  "email10min.troubleshoot.li1.label": "انتظر من 1 إلى 2 دقيقة فقد يتم تأخير الرسائل",
-  "email10min.troubleshoot.li2.label": "اطلب رمز OTP جديد أو رابط تأكيد",
-  "email10min.troubleshoot.li3.label": "إذا تأخر البريد، جرب بريد مؤقت 20 دقيقة أو بريد مؤقت 30 دقيقة",
-  "email10min.troubleshoot.li4.label": "إذا حظر الموقع البريد المؤقت، استخدم بريد دائم",
-  "email10min.troubleshoot.li5.label": "يمكنك التبديل إلى صندوق بريد أطول إذا وصلت الرسائل متأخرة",
+"seo.email10min.faq.q6": "كم عدد عناوين البريد المؤقتة التي يمكنني إنشاؤها؟",
+"seo.email10min.faq.a6": "غير محدود. يمكنك إنشاء ما تشاء من صناديق البريد المؤقتة، لكل منها وقت صلاحية خاص.",
 
-  "email10min.alternatives.title.label": "الخيارات البديلة والأطول",
-  "email10min.alternatives.desc.label": "هل تحتاج وقت أطول من 10 دقائق؟ جرب:",
-  "email10min.links.20min.label": "{$START_LINK}بريد مؤقت 20 دقيقة{$CLOSE_LINK}",
-  "email10min.links.30min.label": "{$START_LINK}بريد مؤقت 30 دقيقة{$CLOSE_LINK}",
-  "email10min.links.saved.label": "{$START_LINK}صندوق بريد محفوظ 7 أيام{$CLOSE_LINK}",
+"seo.email10min.faq.q7": "هل يعمل على الهاتف المحمول؟",
+"seo.email10min.faq.a7": "نعم، الخدمة متجاوبة بالكامل وتعمل بسلاسة على جميع الأجهزة.",
 
-  "email10min.faq.title.label": "الأسئلة الشائعة",
-  "email10min.faq.q1.label": "ما هو البريد المؤقت لمدة 10 دقائق؟",
-  "email10min.faq.a1.label": "هو {$START_TAG_STRONG}صندوق بريد ذاتي التدمير{$CLOSE_TAG_STRONG} يدوم 600 ثانية فقط. مثالي للتحقق، OTP وتجنب الرسائل المزعجة.",
-  "email10min.faq.q2.label": "هل هذه الخدمة مجانية؟",
-  "email10min.faq.a2.label": "نعم. {$START_TAG_STRONG}مولد البريد المؤقت{$CLOSE_TAG_STRONG} مجاني 100٪ دون اشتراكات أو رسوم خفية.",
-  "email10min.faq.q3.label": "هل يمكنني إعادة ضبط أو تمديد البريد؟",
-  "email10min.faq.a3.label": "نعم. استخدم إعادة الضبط لبدء المؤقت من جديد أو اختر بريد 20 أو 30 دقيقة.",
-  "email10min.faq.q4.label": "لماذا لم يصلني رمز OTP أو البريد؟",
-  "email10min.faq.a4.label": "بعض الخدمات تؤخر الرسائل أو تحظر البريد المؤقت. قم بتحديث الصندوق، اطلب رمز جديد أو جرب خيار أطول.",
-  "email10min.faq.q5.label": "هل يمكنني استخدامه للحسابات الحساسة؟",
-  "email10min.faq.a5.label": "غير مستحسن. للحسابات البنكية أو الحكومية استخدم بريد دائم. {$START_TAG_STRONG}البريد المؤقت{$CLOSE_TAG_STRONG} مثالي فقط للاستخدام السريع ومنخفض المخاطر.",
-  "email10min.faq.q6.label": "هل هو مجهول وآمن؟",
-  "email10min.faq.a6.label": "نعم. خدمة {$START_TAG_STRONG}بريد 10 دقائق{$CLOSE_TAG_STRONG} لا تتطلب تسجيل. تُحذف الرسائل تلقائيًا عند انتهاء الوقت والاتصالات محمية بـ HTTPS.",
-  "email10min.faq.q7.label": "كم عدد الصناديق التي يمكنني إنشاؤها؟",
-  "email10min.faq.a7.label": "غير محدود. يمكنك إنشاء ما تشاء من {$START_TAG_STRONG}صناديق البريد المؤقت{$CLOSE_TAG_STRONG}. كل صندوق ينتهي تلقائيًا.",
-  "email10min.faq.q8.label": "هل يعمل على الجوال والأجهزة اللوحية؟",
-  "email10min.faq.a8.label": "نعم. {$START_TAG_STRONG}مولد البريد المؤقت{$CLOSE_TAG_STRONG} يعمل على جميع الأجهزة.",
-  "email10min.faq.q9.label": "هل يمكنني استخدام بريد 10 دقائق فقط؟",
-  "email10min.faq.a9.label": "نعم. {$START_TAG_STRONG}بريد 10 دقائق بسيط{$CLOSE_TAG_STRONG} يمنحك صندوق بريد سريع ومؤقت يُحذف تلقائيًا.",
+"seo.email10min.faq.q8": "هل هو آمن للرسائل المهمة؟",
+"seo.email10min.faq.a8": "مناسب للاستخدام قصير المدى مثل أكواد OTP ورسائل التأكيد. من الأفضل تجنب استخدامه للمعلومات الشخصية الحساسة.",
 
-  "email10min.cta.title.label": "ابدأ الآن",
-  "email10min.cta.subtitle.label": "أنشئ {$START_TAG_STRONG}بريدك المؤقت لمدة 10 دقائق{$CLOSE_TAG_STRONG} مجانًا وبشكل فوري. انضم لآلاف المستخدمين الذين يثقون بـ TempMail4U للحصول على {$START_TAG_STRONG}صناديق بريد مؤقتة آمنة ومجهولة{$CLOSE_TAG_STRONG}. خدمتنا صُممت لحماية خصوصيتك وتبسيط استخدامك للإنترنت.",
-  "email10min.cta.button.label": "أنشئ بريد 10 دقائق",
-  "email10min.cta.note.label": "مجاني • مجهول • آمن • استقبال فقط",
-    "seo.email10min.title": "بريد مؤقت لمدة 10 دقائق - صندوق واردات مجاني | TempMail4u",
+"seo.email10min.faq.q9": "هل هو أفضل من استخدام بريد وهمي؟",
+"seo.email10min.faq.a9": "نعم! على عكس البريد الوهمي، هذه الخدمة توفر صندوق بريد حقيقي وفعال لتلقي الرسائل بشكل شرعي."
+,
+     "seo.email10min.title": "بريد مؤقت لمدة 10 دقائق - صندوق واردات مجاني | TempMail4u",
     "seo.email10min.description": "احصل على بريد مؤقت مجاني لمدة 10 دقائق لعمليات التحقق الفورية. دون تسجيل. احمِ خصوصيتك بصندوق واردات ذاتي الإتلاف.",
     "seo.email10min.keywords": "بريد 10 دقائق, بريد مؤقت, صندوق مؤقت, بريد حارق, تحقق بالبريد, بريد OTP, حماية الخصوصية, منع الرسائل المزعجة, بريد مجهول, بريد سريع",
     "email20min.title": " بريد مؤقت لمدة 20 دقيقة – صندوق واردات مجاني ",
@@ -529,24 +522,7 @@
   , "seo.home.faq.a9": "نعم. نوفر 10 و20 و30 دقيقة للاستخدام السريع والمؤقت."
   , "seo.home.faq.q10": "لماذا أستخدم بريداً خاصاً؟"
   , "seo.home.faq.a10": "لحماية الخصوصية وتجنب الرسائل المزعجة والحفاظ على نظافة بريدك وتقليل تسرب البيانات."
-  , "seo.email10min.faq.q1": "ما هو بريد 10 دقائق؟"
-  , "seo.email10min.faq.a1": "صندوق يُحذف تلقائياً بعد 600 ثانية؛ مثالي للأكواد والروابط دون كشف بريدك الحقيقي."
-  , "seo.email10min.faq.q2": "للتسجيل وOTP؟"
-  , "seo.email10min.faq.a2": "نعم. استخدم الصندوق المؤقت للتسجيل السريع والرموز والتحميلات؛ استلام فقط ومن دون تسجيل."
-  , "seo.email10min.faq.q3": "إعادة الضبط أو التمديد؟"
-  , "seo.email10min.faq.a3": "استخدم إعادة الضبط لبدء المؤقت من جديد أو اختر 20/30 دقيقة."
-  , "seo.email10min.faq.q4": "لم يصل OTP؟"
-  , "seo.email10min.faq.a4": "قد تؤخر بعض الخدمات الرسائل أو تحجب النطاقات المؤقتة. حدّث الصفحة أو اطلب رمزاً جديداً أو استخدم مدة أطول."
-  , "seo.email10min.faq.q5": "للحسابات الحساسة؟"
-  , "seo.email10min.faq.a5": "غير مُستحسن. استخدم بريداً دائماً للبنوك والحسابات الشخصية."
-  , "seo.email10min.faq.q6": "هل هو خاص ومجهول؟"
-  , "seo.email10min.faq.a6": "نعم. لا يتطلب تسجيلاً؛ HTTPS؛ حذف عند الانتهاء."
-  , "seo.email10min.faq.q7": "كم صندوقاً أستطيع إنشاءه؟"
-  , "seo.email10min.faq.a7": "غير محدود. يمكنك إنشاء ما تحتاجه؛ كل صندوق ينتهي تلقائياً."
-  , "seo.email10min.faq.q8": "هل يعمل على الجوال؟"
-  , "seo.email10min.faq.a8": "نعم، يعمل على جميع الأجهزة."
-  , "seo.email10min.faq.q9": "استخدام بسيط 10 دقائق فقط؟"
-  , "seo.email10min.faq.a9": "نعم. بريد بسيط لمدة 10 دقائق ينتهي تلقائياً."
+
   , "seo.email20min.faq.q1": "ما هو بريد 20 دقيقة؟"
   , "seo.email20min.faq.a1": "عنوان مؤقت يبقى نشطاً لمدة 20 دقيقة لاستلام الرسائل دون استخدام بريدك الشخصي."
   , "seo.email20min.faq.q2": "هل هو مجاني؟"
